--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
+    "node-forge": "^1.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
